--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,9 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="shortcut icon" href="https://colorlib.com/preview/theme/kenedy/img/fav.png">
+    <link rel="shortcut icon" href="/img/fav.png">
 
-    <meta name="author" content="colorlib">
+    <meta name="author" content="Hannahmae Delacruz">
 
     <meta name="description" content="">
 
@@ -21,18 +21,18 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700,900" rel="stylesheet">
     <script type="text/javascript" charset="UTF-8" src="https://use.fontawesome.com/b080ad7478.js"></script>
 
-    <link href="stylesheets/css_002.css" rel="stylesheet">
-    <link href="stylesheets/css.css" rel="stylesheet">
+    <!-- <link href="stylesheets/css_002.css" rel="stylesheet">
+    <link href="stylesheets/css.css" rel="stylesheet"> -->
 
     <!-- link rel="stylesheet" href="stylesheets/linearicons.css" -->
     <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
     <!-- link rel="stylesheet" href="stylesheets/font-awesome.css" -->
-    <link rel="stylesheet" href="stylesheets/bootstrap.css">
+    <!-- <link rel="stylesheet" href="stylesheets/bootstrap.css">
     <link rel="stylesheet" href="stylesheets/magnific-popup.css">
-    <link rel="stylesheet" href="stylesheets/nice-select.css">
-    <link rel="stylesheet" href="stylesheets/animate.css">
-    <link rel="stylesheet" href="stylesheets/owl.css">
-    <link rel="stylesheet" href="stylesheets/main.css">
+    <link rel="stylesheet" href="stylesheets/nice-select.css"> -->
+    <!-- <link rel="stylesheet" href="stylesheets/animate.css"> -->
+    <!-- <link rel="stylesheet" href="stylesheets/owl.css"> -->
+    <!-- <link rel="stylesheet" href="stylesheets/main.css"> -->
     <script type="text/javascript" charset="UTF-8" src="javascripts/common.js"></script>
     <script type="text/javascript" charset="UTF-8" src="javascripts/util.js"></script>
 </head>
@@ -50,25 +50,25 @@
         <div class="container main-menu">
             <div class="row align-items-center d-flex">
                 <div id="logo">
-                    <a href="https://colorlib.com/preview/theme/kenedy/index.html"><img src="images/logo.png" alt="" title=""></a>
+                    <a href="/index.html"><img src="images/logo.png" alt="" title=""></a>
                 </div>
                 <nav id="nav-menu-container">
                     <ul class="nav-menu sf-js-enabled sf-arrows" style="touch-action: pan-y;">
-                        <li class=""><a class="active" href="https://colorlib.com/preview/theme/kenedy/index.html">Home</a></li>
-                        <li><a href="https://colorlib.com/preview/theme/kenedy/about.html">About</a></li>
-                        <li><a href="https://colorlib.com/preview/theme/kenedy/portfolio.html">Portfolio</a></li>
+                        <li class=""><a class="active" href="/index.html">Home</a></li>
+                        <li><a href="/about.html">About</a></li>
+                        <li><a href="/portfolio.html">Portfolio</a></li>
                         <li class="menu-has-children"><a href="#" class="sf-with-ul">Pages</a>
                             <ul style="display: none;">
-                                <li><a href="https://colorlib.com/preview/theme/kenedy/elements.html">Elements</a></li>
-                                <li><a href="https://colorlib.com/preview/theme/kenedy/contact.html">Contact</a></li>
-                                <li><a href="https://colorlib.com/preview/theme/kenedy/services.html">Service</a></li>
-                                <li><a href="https://colorlib.com/preview/theme/kenedy/portfolio-details.html">Portfolio Details</a></li>
+                                <li><a href="/elements.html">Elements</a></li>
+                                <li><a href="/contact.html">Contact</a></li>
+                                <li><a href="/services.html">Service</a></li>
+                                <li><a href="/portfolio-details.html">Portfolio Details</a></li>
                             </ul>
                         </li>
                         <li class="menu-has-children"><a href="" class="sf-with-ul">Blog</a>
                             <ul style="display: none;">
-                                <li><a href="https://colorlib.com/preview/theme/kenedy/blog-home.html">Blog Home</a></li>
-                                <li><a href="https://colorlib.com/preview/theme/kenedy/blog-single.html">Blog Single</a></li>
+                                <li><a href="/blog-home.html">Blog Home</a></li>
+                                <li><a href="/blog-single.html">Blog Single</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -105,7 +105,7 @@
         </div>
     </section>
 
-    <section class="brands-area">
+    <!-- <section class="brands-area">
         <div class="container">
             <div class="brand-wrap">
                 <div class="row align-items-center active-brand-carusel justify-content-start no-gutters owl-carousel owl-theme owl-loaded">
@@ -201,7 +201,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <section class="about-area section-gap">
         <div class="container">
@@ -276,7 +276,7 @@
                                 <h4>2D Vinyl Design</h4>
                                 <div class="cat">Client Project</div>
                             </div>
-                            <a class="overlay" href="https://colorlib.com/preview/theme/kenedy/portfolio-details.html"></a>
+                            <a class="overlay" href="/portfolio-details.html"></a>
                         </div>
                     </div>
                     <div class="single-work col-lg-4 col-md-6 col-sm-12 all web-design branding wow fadeInUp" data-wow-duration="2s" data-wow-delay="0.2s" style="position: absolute; left: 33.3333%; top: 0px; visibility: hidden; animation-duration: 2s; animation-delay: 0.2s; animation-name: none;">
@@ -289,7 +289,7 @@
                                 <h4>2D Vinyl Design</h4>
                                 <div class="cat">Client Project</div>
                             </div>
-                            <a class="overlay" href="https://colorlib.com/preview/theme/kenedy/portfolio-details.html"></a>
+                            <a class="overlay" href="/portfolio-details.html"></a>
                         </div>
                     </div>
                     <div class="single-work col-lg-4 col-md-6 col-sm-12 all branding web-design wow fadeInUp" data-wow-duration="2s" data-wow-delay="0.4s" style="position: absolute; left: 66.6667%; top: 0px; visibility: hidden; animation-duration: 2s; animation-delay: 0.4s; animation-name: none;">
@@ -302,7 +302,7 @@
                                 <h4>2D Vinyl Design</h4>
                                 <div class="cat">Client Project</div>
                             </div>
-                            <a class="overlay" href="https://colorlib.com/preview/theme/kenedy/portfolio-details.html"></a>
+                            <a class="overlay" href="/portfolio-details.html"></a>
                         </div>
                     </div>
                     <div class="single-work col-lg-4 col-md-6 col-sm-12 all web-design wow fadeInUp" data-wow-duration="2s" data-wow-delay="0.6s" style="position: absolute; left: 66.6667%; top: 359px; visibility: hidden; animation-duration: 2s; animation-delay: 0.6s; animation-name: none;">
@@ -315,7 +315,7 @@
                                 <h4>2D Vinyl Design</h4>
                                 <div class="cat">Client Project</div>
                             </div>
-                            <a class="overlay" href="https://colorlib.com/preview/theme/kenedy/portfolio-details.html"></a>
+                            <a class="overlay" href="/portfolio-details.html"></a>
                         </div>
                     </div>
                     <div class="single-work col-lg-4 col-md-6 col-sm-12 all creative wow fadeInUp" data-wow-duration="2s" style="position: absolute; left: 0%; top: 388px; visibility: hidden; animation-duration: 2s; animation-name: none;">
@@ -328,7 +328,7 @@
                                 <h4>2D Vinyl Design</h4>
                                 <div class="cat">Client Project</div>
                             </div>
-                            <a class="overlay" href="https://colorlib.com/preview/theme/kenedy/portfolio-details.html"></a>
+                            <a class="overlay" href="/portfolio-details.html"></a>
                         </div>
                     </div>
                     <div class="single-work col-lg-4 col-md-6 col-sm-12 all branding wow fadeInUp" data-wow-duration="2s" data-wow-delay="0.2s" style="position: absolute; left: 33.3333%; top: 437px; visibility: hidden; animation-duration: 2s; animation-delay: 0.2s; animation-name: none;">
@@ -341,7 +341,7 @@
                                 <h4>2D Vinyl Design</h4>
                                 <div class="cat">Client Project</div>
                             </div>
-                            <a class="overlay" href="https://colorlib.com/preview/theme/kenedy/portfolio-details.html"></a>
+                            <a class="overlay" href="/portfolio-details.html"></a>
                         </div>
                     </div>
                 </div>
@@ -496,7 +496,7 @@
         </div>
     </section>
 
-    <section class="testimonials_area section-gap">
+    <!-- <section class="testimonials_area section-gap">
         <div class="container">
             <div class="testi_slider owl-carousel owl-theme owl-responsive--1 owl-loaded">
 
@@ -664,7 +664,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <section class="contact-area section-gap">
         <div class="container">
@@ -684,12 +684,12 @@
                 </div>
                 <div class="col-lg-4 col-md-4">
                     <div class="contact-box">
-                        <h4>information@colorlib.com</h4>
+                        <h4>info@handledpr.com</h4>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-4">
                     <div class="contact-box">
-                        <h4>kenedyjackson.me</h4>
+                        <h4>handledpr.com</h4>
                     </div>
                 </div>
             </div>
@@ -736,7 +736,7 @@
                     <script type="text/javascript" async="" src="javascripts/analytics.js"></script>
                     <script type="text/javascript">
                         document.write(new Date().getFullYear());
-                    </script>2019 All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com/" target="_blank">Colorlib</a>
+                    </script> All rights reserved
                 </p>
             </div>
         </div>
@@ -750,9 +750,9 @@
 
     <script src="javascripts/jquery-2.js" type="text/javascript"></script>
     <!-- <script src="javascripts/popper.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous" type="text/javascript"></script> -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous" type="5d0d0c90771eb72114b13ba4-text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous" type="text/javascript"></script>
     <script src="javascripts/bootstrap.js" type="text/javascript"></script>
-    <!-- <script type="text/javascript" src="javascripts/js.js"></script> -->
+    <script type="text/javascript" src="javascripts/js.js"></script>
     <script type="5d0d0c90771eb72114b13ba4-text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBhOdIF3Y9382fqJYt5I_sswSrEw5eihAA"></script>
     <script src="javascripts/easing.js" type="text/javascript"></script>
     <script src="javascripts/hoverIntent.js" type="text/javascript"></script>
@@ -782,21 +782,21 @@
 
     <nav id="mobile-nav">
         <ul class="" style="touch-action: pan-y;" id="">
-            <li class=""><a class="active" href="https://colorlib.com/preview/theme/kenedy/index.html">Home</a></li>
-            <li><a href="https://colorlib.com/preview/theme/kenedy/about.html">About</a></li>
-            <li><a href="https://colorlib.com/preview/theme/kenedy/portfolio.html">Portfolio</a></li>
+            <li class=""><a class="active" href="/index.html">Home</a></li>
+            <li><a href="/about.html">About</a></li>
+            <li><a href="/portfolio.html">Portfolio</a></li>
             <li class="menu-has-children"><i class="lnr lnr-chevron-down"></i><a href="#" class="sf-with-ul">Pages</a>
                 <ul style="display: none;">
-                    <li><a href="https://colorlib.com/preview/theme/kenedy/elements.html">Elements</a></li>
-                    <li><a href="https://colorlib.com/preview/theme/kenedy/contact.html">Contact</a></li>
-                    <li><a href="https://colorlib.com/preview/theme/kenedy/services.html">Service</a></li>
-                    <li><a href="https://colorlib.com/preview/theme/kenedy/portfolio-details.html">Portfolio Details</a></li>
+                    <li><a href="/elements.html">Elements</a></li>
+                    <li><a href="/contact.html">Contact</a></li>
+                    <li><a href="/services.html">Service</a></li>
+                    <li><a href="/portfolio-details.html">Portfolio Details</a></li>
                 </ul>
             </li>
             <li class="menu-has-children"><i class="lnr lnr-chevron-down"></i><a href="" class="sf-with-ul">Blog</a>
                 <ul style="display: none;">
-                    <li><a href="https://colorlib.com/preview/theme/kenedy/blog-home.html">Blog Home</a></li>
-                    <li><a href="https://colorlib.com/preview/theme/kenedy/blog-single.html">Blog Single</a></li>
+                    <li><a href="/blog-home.html">Blog Home</a></li>
+                    <li><a href="/blog-single.html">Blog Single</a></li>
                 </ul>
             </li>
         </ul>
