--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
 
         <meta charset="UTF-8">
 
-        <title>Hannah Delacruz - PR and Branding</title>
+        <title>Hannah Delacruz - PR and Branding Consultant</title>
         <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700,900" rel="stylesheet">
         <script type="text/javascript" charset="UTF-8" src="https://use.fontawesome.com/b080ad7478.js"></script>
@@ -33,6 +33,7 @@
             </div>
         </div>
 
+        <!-- Nav Header -->
         <header id="header">
             <div class="container main-menu">
                 <div class="row align-items-center d-flex">
@@ -42,76 +43,108 @@
                     <nav id="nav-menu-container">
                         <ul class="nav-menu sf-js-enabled sf-arrows" style="touch-action: pan-y;">
                             <li class=""><a class="active" href="/index.html">Home</a></li>
-                            <li><a href="/index.html">About</a></li>
-                            <li><a href="/index.html">Portfolio</a></li>
-                            <li class="menu-has-children"><a href="#" class="sf-with-ul">Pages</a>
+                            <li><a href="/index.html">Services</a></li>
+                            <li><a href="/index.html">Client Wins</a></li>
+                            <li><a href="/index.html">Job History</a></li>
+                            <li><a href="/index.html">Contact</a></li>
+                            <!-- <li class="menu-has-children"><a href="#" class="sf-with-ul">Pages</a>
                                 <ul style="display: none;">
                                     <li><a href="/index.html">Contact</a></li>
                                     <li><a href="/index.html">Services</a></li>
                                 </ul>
-                            </li>
+                            </li> -->
                         </ul>
                     </nav>
                 </div>
             </div>
         </header>
 
-        <section class="home-banner-area">
+        <!-- Welcome Well -->
+        <section class="home-banner-area section-gap">
             <div class="container">
-                <div class="row fullscreen d-flex align-items-center" style="height: 894px;">
-                    <div class="banner-content col-lg-6 col-md-12 justify-content-center ">
-                        <div class="me wow fadeInDown" data-wow-duration="1s" data-wow-delay="1.2s" style="visibility: visible; animation-duration: 1s; animation-delay: 1.2s; animation-name: fadeInDown;">PR and Branding Consultant</div>
-                        <h1 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.7s" style="visibility: visible; animation-duration: 1s; animation-delay: 1.7s; animation-name: fadeInUp;">Hannah Delacruz</h1>
-                        <div class="designation mb-50 wow fadeInUp" data-wow-duration="1s" data-wow-delay="2.1s" style="visibility: visible; animation-duration: 1s; animation-delay: 2.1s; animation-name: fadeInUp;">
-                            Your <span class="designer">PR</span> and <span class="developer">Branding</span> Consultant
-                        </div>
-                        <a href="#" class="primary-btn" data-text="Hire Me"><span>Hire Me</span></a>
-                    </div>
-                    <div class="banner-img col-lg-6 col-md-6 align-self-end">
-                        <img class="img-fluid" src="images/banner-img.png" alt="">
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section class="about-area section-gap">
-            <div class="container">
-                <div class="row align-items-center justify-content-between">
-                    <div class="col-lg-6 about-left">
+                <div class="row banner-area-container d-flex align-items-center">
+                <!-- <div class="row fullscreen d-flex align-items-center" style="height: 894px;"> -->
+                    <div class="col-md-3 about-left">
                         <img class="img-fluid" src="images/about-img.jpg" alt="">
                     </div>
-                    <div class="col-lg-5 col-md-12 about-right">
-                        <div class="section-title">
-                            <h2>about myself</h2>
+
+                    <div class="banner-content col-md-12 col-lg-9 justify-content-center ">
+                        <!-- <div class="me wow fadeInDown" data-wow-duration="1s" data-wow-delay="1.2s" style="visibility: visible; animation-duration: 1s; animation-delay: 1.2s; animation-name: fadeInDown;">PR and Branding Consultant</div> -->
+                        <div class="designation mb-15 wow fadeIn" data-wow-duration="0.35s" data-wow-delay="0.15s" style="visibility: visible; animation-duration: 0.35s; animation-delay: 0.15s; animation-name: fadeIn;">
+                            Hannah Delacruz
                         </div>
-                        <div class="mb-50 wow fadeIn" data-wow-duration=".8s" style="visibility: hidden; animation-duration: 0.8s; animation-name: none;">
-                            <p>
-                                inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct standards especially in the workplace. That’s why it’s crucial that, as women, our behavior on the job is beyond reproach. inappropriate behavior is often laughed. inappropriate behavior is often laughed off as “boys will be boys,” women face higher.
-                            </p>
-                            <p>That’s why it’s crucial that, as women, our behavior on the job is beyond reproach. inappropriate behavior is often laughed.
-                            </p>
-                        </div>
-                        <a href="#" class="primary-btn white" data-text="More Info">
-                            <span>More Info</span>
-                        </a>
-                        <a href="#" class="primary-btn" data-text="Resume">
-                            <span>Resume</span>
-                        </a>
+
+                        <h1 class="wow fadeInRight" data-wow-duration="0.45s" data-wow-delay=".55s" style="visibility: visible; animation-duration: 0.95s; animation-delay: 0.95s; animation-name: fadeInRight;">
+                            PR and Branding Consultant
+                        </h1>
+
+                        <!-- <h1 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.7s" style="visibility: visible; animation-duration: 1s; animation-delay: 1.7s; animation-name: fadeInUp;">Hannah Delacruz</h1>
+                        <div class="designation mb-50 wow fadeInUp" data-wow-duration="1s" data-wow-delay="2.1s" style="visibility: visible; animation-duration: 1s; animation-delay: 2.1s; animation-name: fadeInUp;">
+                            Your <span class="designer">PR</span> and <span class="developer">Branding</span> Consultant
+                        </div> -->
+
+                        <a href="#" class="primary-btn" data-text="Let's Talk!"><span>Let's Talk!</span></a>
                     </div>
                 </div>
             </div>
         </section>
 
+        <!-- Services Offered -->
+        <section class="service-area section-gap">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="section-title">
+                            <h2 class="section-title-header">PR and Branding Services</h2>
+                            <p><strong>TODO</strong></p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-lg-3 col-md-6">
+                        <div class="single-service wow fadeInUp" data-wow-duration="1s" style="visibility: hidden; animation-duration: 1s; animation-name: none;">
+                            <span class="lnr lnr-screen"></span>
+                            <h4><span>Web</span> Design</h4>
+                            <p>If you’re looking blank casvsettes on the web, you may confuse.</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6">
+                        <div class="single-service wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.2s" style="visibility: hidden; animation-duration: 1s; animation-delay: 0.2s; animation-name: none;">
+                            <span class="lnr lnr-laptop-phone"></span>
+                            <h4><span>Application</span> Development</h4>
+                            <p>If you’re looking blank casvsettes on the web, you may confuse.</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6">
+                        <div class="single-service wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.4s" style="visibility: hidden; animation-duration: 1s; animation-delay: 0.4s; animation-name: none;">
+                            <span class="lnr lnr-database"></span>
+                            <h4><span>Web</span> Development</h4>
+                            <p>If you’re looking blank casvsettes on the web, you may confuse.</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6">
+                        <div class="single-service wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.6s" style="visibility: hidden; animation-duration: 1s; animation-delay: 0.6s; animation-name: none;">
+                            <span class="lnr lnr-chart-bars"></span>
+                            <h4><span>Web</span> Development</h4>
+                            <p>If you’re looking blank casvsettes on the web, you may confuse.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Client PR Wins -->
         <section class="work-area section-gap-top section-gap-bottom-90" id="work">
             <div class="container">
                 <div class="row d-flex justify-content-between align-items-end mb-80">
-                    <div class="col-lg-6">
+                    <div class="col-lg-12">
                         <div class="section-title">
-                            <h2>Client PR Wins</h2>
-                            <p>If you are looking at blank cassettes on the web, you may be very confused at the difference in price. You may see some for as low as $.17 each.</p>
+                            <h2 class="section-title-header">Client PR Wins</h2>
+                            <p><strong>TODO</strong></p>
                         </div>
                     </div>
-                    <div class="col-lg-6">
+                    <!-- <div class="col-lg-6">
                         <div class="filters">
                             <ul>
                                 <li class="active" data-filter=".all">All Categories</li>
@@ -120,8 +153,9 @@
                                 <li data-filter=".web-design">Web Design</li>
                             </ul>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
+
                 <div class="filters-content">
                     <div class="row grid" style="position: relative; height: 719.167px;">
                         <div class="single-work col-lg-4 col-md-6 col-sm-12 all creative wow fadeInUp" data-wow-duration="2s" style="position: absolute; left: 0%; top: 0px; visibility: hidden; animation-duration: 2s; animation-name: none;">
@@ -207,12 +241,13 @@
             </div>
         </section>
 
+        <!-- Job History -->
         <section class="job-area section-gap-top section-gap-bottom-90">
             <div class="container">
                 <div class="row d-flex">
                     <div class="col-lg-12">
                         <div class="section-title">
-                            <h2>Job History</h2>
+                            <h2 class="section-title-header">Job History</h2>
                             <p>If you are looking at blank cassettes on the web, you may be very confused at the difference in price. You may see some for as low as $.17 each.</p>
                         </div>
                     </div>
@@ -306,60 +341,12 @@
             </div>
         </section>
 
-        <section class="service-area section-gap">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-12">
-                        <div class="section-title">
-                            <h2>My PR and Branding Services</h2>
-                            <p>If you are looking at blank cassettes on the web, you may be very confused at the difference in price. You may see some for as low as $.17 each.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-3 col-md-6">
-                        <div class="single-service wow fadeInUp" data-wow-duration="1s" style="visibility: hidden; animation-duration: 1s; animation-name: none;">
-                            <span class="lnr lnr-screen"></span>
-                            <h4>
-    <span>Web</span> Design
-    </h4>
-                            <p>If you’re looking blank casvsettes on the web, you may confuse.</p>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6">
-                        <div class="single-service wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.2s" style="visibility: hidden; animation-duration: 1s; animation-delay: 0.2s; animation-name: none;">
-                            <span class="lnr lnr-laptop-phone"></span>
-                            <h4><span>Application</span> Development
-    </h4>
-                            <p>If you’re looking blank casvsettes on the web, you may confuse.</p>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6">
-                        <div class="single-service wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.4s" style="visibility: hidden; animation-duration: 1s; animation-delay: 0.4s; animation-name: none;">
-                            <span class="lnr lnr-database"></span>
-                            <h4><span>Web</span> Development
-    </h4>
-                            <p>If you’re looking blank casvsettes on the web, you may confuse.</p>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6">
-                        <div class="single-service wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.6s" style="visibility: hidden; animation-duration: 1s; animation-delay: 0.6s; animation-name: none;">
-                            <span class="lnr lnr-chart-bars"></span>
-                            <h4><span>Web</span> Development
-    </h4>
-                            <p>If you’re looking blank casvsettes on the web, you may confuse.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
         <section class="contact-area section-gap">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="contact-title">
-                            <h2>Contact Me</h2>
+                            <h2 class="section-title-header">Contact Me</h2>
                             <p>If you are looking at blank cassettes on the web, you may be very confused at the difference in price. You may see some for as low as $.17 each.</p>
                         </div>
                     </div>
@@ -397,10 +384,10 @@
                     <div class="col-lg-12">
                         <div class="footer-top flex-column">
                             <div class="footer-logo">
-                                <a href="#">
+                                <!-- <a href="#">
                                     <img src="images/logo.png" alt="">
-                                </a>
-                                <h4>Follow Me</h4>
+                                </a> -->
+                                <h4>Let's Connect</h4>
                             </div>
                             <div class="footer-social">
                                 <a href="#"><i class="fa fa-facebook"></i></a>
